# Etyon

./: .gitignore  .npmrc  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  agents-audit.md  api-spec.md  cliff.toml  clippy.toml  deny.toml  electron-liquid-glass.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  skills-lock.json  tsconfig.json  tsconfig.root.json  turbo.json  vite.config.ts  vitest.workspace.ts
.agents/react-doctor/: AGENTS.md
.agents/skills/tanstack-query/: SKILL.md
.agents/skills/tanstack-router/: SKILL.md
.claude/: settings.json
.claude/skills/: agent-self-scheduling  fable-safe-prompt  tanstack-query  tanstack-router
.cursor/: hooks.json
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.cursor/plans/: hono_+_ai_sdk_集成_e14cbea2.plan.md
.github/workflows/: release.yml
.vite-hooks/: pre-commit
advisor-plans/: 001-restrict-connection-token-file-permissions.md  002-test-delegate-tool-safety.md  003-redact-secrets-in-agent-event-store.md  004-realign-agents-design-docs.md  005-composer-image-mode.md  006-gate-workflow-tool-behind-approval.md  007-serialize-agent-run-transactions.md  008-chat-composer-state-hygiene.md  README.md
apps/cli/: package.json  tsconfig.json
apps/cli/src/: index.ts
apps/desktop/: components.json  drizzle.config.ts  forge.config.ts  index.html  package.json  tsconfig.json  vite-aliases.ts  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vitest.config.ts
apps/desktop/drizzle/: 0000_careless_proudstar.sql  0001_parallel_magik.sql  0002_fair_black_crow.sql  README.md  (+12 more)
crates/etyon-cli/: Cargo.toml
crates/etyon-cli/src/: commands.rs  main.rs  output.rs
crates/etyon-client/: Cargo.toml
crates/etyon-client/src/: connection.rs  error.rs  http.rs  lib.rs
crates/etyon-index/: Cargo.toml
crates/etyon-index/src/: gitignore.rs  lib.rs  model.rs  refresh.rs
crates/etyon-types/: Cargo.toml
doc/: agents.md  ai.md  api-spec.md  chat-project-context.md  check.md  checkpoints.md  clean-cache.md  code-agent-tools.md  database.md  electron-liquid-glass.md  esm.md  heroui-migration.md  heroui-pro-ai-chat.md  home.md  i18n.md  liquid-glass.md  logger.md  packaging.md  plugins.md  release.md  rpc.md  rust-cli.md  server.md  settings.md  shadcn-cli.md  tanstack-table-v9.md  telegram.md  title-bar.md  tray.md  typescript-6.md  vite-plus.md
plans/: agents-runtime.md  feature-gap-research-2026-07-12.md  first-light-install-experience.md  gap-closure-roadmap.md  plan-mode-interactions.md  settings-rtk-memory-git-hotkeys.md
script/: clean-cache.mjs  release.mjs
(+566 files in other folders)
