[workspace]
members = [
  "crates/etyon-cli",
  "crates/etyon-client",
  "crates/etyon-index",
  "crates/etyon-types"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
etyon-client = { path = "crates/etyon-client", version = "0.1.0" }
etyon-index = { path = "crates/etyon-index", version = "0.1.0" }
etyon-types = { path = "crates/etyon-types", version = "0.1.0" }
eventsource-stream = "0.2"
futures-util = "0.3"
ignore = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
