[package]
name = "etyon-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "etyon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
etyon-client.workspace = true
etyon-index.workspace = true
etyon-types.workspace = true
eventsource-stream.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
